# An-Adaptive-Levenberg-Marquardt-Algorithm

./: AUTHORS.md  CITATION.cff  CONTRIBUTING.md  Experiments.ipynb  LICENSE.md  MANIFEST.in  OptimizerTester.py  Problems  README.md  REPRODUCIBILITY.md  __init__.py  base.py  optimizers.py  pyproject.toml
.github/workflows/: ci.yml
src/: Experiments.ipynb  __init__.py  base.py  models.py
src/__pycache__/: optimizers.py
tests/: test_smoke.py
