[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-lm"
version = "0.1.0"
description = "Research code for adaptive Levenberg-Marquardt and related second-order optimization methods."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AUTHOR NAME TO BE FILLED", email = "author@example.com" }
]
maintainers = [
  { name = "MAINTAINER NAME TO BE FILLED", email = "maintainer@example.com" }
]
dependencies = [
  "jax>=0.4",
  "jaxlib>=0.4",
  "numpy>=1.24",
  "scipy>=1.10"
]
keywords = ["optimization", "levenberg-marquardt", "newton", "jax", "numerical-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Mathematics"
]

[project.urls]
Homepage = "https://github.com/YOUR-ORG-OR-USER/adaptive-lm"
Repository = "https://github.com/YOUR-ORG-OR-USER/adaptive-lm"
Issues = "https://github.com/YOUR-ORG-OR-USER/adaptive-lm/issues"
Documentation = "https://github.com/YOUR-ORG-OR-USER/adaptive-lm"
Paper = "https://doi.org/TO_BE_FILLED_AFTER_PUBLICATION"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0"
]
experiments = [
  "jupyter>=1.0",
  "matplotlib>=3.8",
  "tqdm>=4.66"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
